[package]
name = "graphics_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.58"
fred_api = { git = "https://github.com/currency-engineering/fred-api.git" }
key-tree = { git = "https://github.com/currency-engineering/key-tree.git" }
regex = "1.5.6"
serde = "1.0.137"
time_series = { git = "https://github.com/currency-engineering/time-series.git" }

